# cmake-avr-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: main.hpp
src/: CMakeLists.txt  main.cpp
